--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Inter';
+  src: url(./Inter/Inter-ExtraLight.ttf);
+}
+
+@font-face {
+  font-family: 'Inter-Thin';
+  src: url(./Inter/Inter-Thin.ttf);
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 a {
@@ -17,4 +26,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.thin {
+  font-family: 'Inter-Thin';
 }
