--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url(./Inter/Inter-ExtraLight.ttf);
+  src: url(./Inter/Inter-SemiBold.ttf);
 }
 
 @font-face {
