--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Inter-Thin';
-  src: url(./Inter/Inter-Thin.ttf);
+  src: url(./Inter/Inter-ExtraLight.ttf);
 }
 
 html,
